# xquant

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  USING.md  pyproject.toml
examples/: crypto_mean_reversion.py  equity_momentum.py  forex_carry.py
tests/: test_backtest.py  test_data.py  test_features.py  test_risk.py  test_signals.py
xquant-core/data/: __init__.py
xquant-core/data/adapters/: base.py  forex.py
xquant-core/execution/: paper.py
xquant-core/features/: base.py  regime.py  technical.py
xquant-core/signals/: alpha.py  decay.py
xquant-core/validation/: montecarlo.py
xquant/backtest/: cost.py  portfolio.py  sizing.py
xquant/backtest/engine/: event.py  vectorized.py
xquant/data/: calendar.py  loader.py  normalizer.py
xquant/data/adapters/: __init__.py  ccxt.py  yfinance.py
xquant/execution/: live.py
xquant/execution/adapters/: ccxt_live.py
xquant/features/: __init__.py  cross_asset.py  microstructure.py
xquant/reporting/: export.py  plots.py  tearsheet.py
xquant/risk/: drawdown.py  exposure.py  metrics.py
xquant/signals/: combiner.py  scorer.py
xquant/signals/formats/: numerai.py  worldquant.py
xquant/validation/: oos.py  overfit.py  regime.py  walkforward.py
